--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "node server.js"
+    "start": "NODE_ENV=production node server.js"
   }
 }
